# ophiolite

./: .gitattributes  .gitignore  15-POINT-OPTIMIZATION-PLAN.md  Cargo.toml  README.md  STACK-CONTEXT.md  build.rs  las_canonical_schema.md  lasio-basic-example.md  lithos_crate_architecture.md  lithos_roadmap.md  ophiolite_roadmap.md  package.json
F3_synthetic/: README.md  benchmark_report.json  benchmark_report.md  derived_horizon_conversion_report.json  derived_horizon_conversion_report.md  f3_dataset_regularized.tbvol  survey_package  validate_bundle.py  validation_report.json
apps/lithos-harness/src-tauri/: Cargo.toml  tauri.conf.json
apps/lithos-harness/src-tauri/capabilities/: default.json
apps/lithos-harness/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/ophiolite-harness/src-tauri/: Cargo.toml  tauri.conf.json
apps/ophiolite-harness/src-tauri/capabilities/: default.json
apps/ophiolite-harness/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/traceboost-demo/src-tauri/: Cargo.toml  tauri.conf.json
apps/traceboost-demo/src-tauri/capabilities/: default.json
apps/traceboost-demo/src-tauri/icons/: icon.icns
apps/traceboost-demo/src-tauri/src/: app_paths.rs  crs_registry.rs  diagnostics.rs  import_manager.rs  lib.rs  main.rs  preview_session.rs  preview_session_bench.rs  processing.rs  processing_authoring.rs  processing_cache.rs  processing_cache_bench.rs  project_settings.rs  security.rs  segy_import_recipes.rs  workspace.rs
articles/: README.md
charts/: .gitignore  CHANGELOG.md  README.md  package.json  playwright.config.ts  tsconfig.base.json
contracts/: README.md
crates/lithos-package/: Cargo.toml
crates/lithos-package/src/: lib.rs
crates/lithos-project/: Cargo.toml
crates/lithos-project/src/: lib.rs
crates/ophiolite-cli/: Cargo.toml
crates/ophiolite-cli/operations/: catalog.json
crates/ophiolite-cli/src/: lib.rs  main.rs  operation_catalog.rs
crates/ophiolite-package/: Cargo.toml
crates/ophiolite-package/src/: lib.rs
crates/ophiolite-project/: Cargo.toml
crates/ophiolite-project/src/: lib.rs
crates/ophiolite-sdk/: Cargo.toml
crates/ophiolite-sdk/src/: lib.rs
crates/ophiolite-seismic/: Cargo.toml
crates/ophiolite-seismic-runtime/: Cargo.toml
crates/ophiolite-seismic-runtime/benches/: compute_storage.rs  post_stack_neighborhood_kernels.rs
crates/ophiolite-seismic-runtime/src/: avo_analysis.rs  compute.rs  error.rs  execution.rs  gather_processing.rs  horizons.rs  identity.rs  ingest.rs  lib.rs  mdio.rs  metadata.rs  openvds.rs  planner.rs  post_stack_neighborhood.rs  preflight.rs  prestack_analysis.rs  prestack_store.rs  processing_package.rs  processing_runtime.rs  render.rs  rock_physics.rs  segy_export.rs  store.rs  survey_time_depth.rs  time_depth.rs  trace_local_chunk_planning.rs  zarr_export.rs
crates/ophiolite-seismic-runtime/src/storage/: mod.rs  section_assembler.rs  tbvol.rs  tbvolc.rs  tile_geometry.rs  volume_store.rs  zarr.rs
crates/ophiolite-seismic/src/: contracts.rs  lib.rs
crates/ophiolite-seismic/src/contracts/: domain.rs  inspectable_processing_plan.rs  mod.rs  models.rs  operations.rs  operator_catalog.rs  processing.rs  resolve_dtos.rs  views.rs
docs/: lasio_non_v3_parity.md  traceboost-demo-migration.md
examples/: sample_write_sect_widths_20_wide.las
python/: README.md  pyproject.toml
python/jupyter/: README.md  pyproject.toml
python/jupyter/src/ophiolite_jupyter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/jupyter/src/ophiolite_jupyter/static/: widget-avo-crossplot.js  widget-avo-response.js  widget.css
python/jupyter/tests/: test_avo_widgets.py
python/src/ophiolite_automation/: __init__.py  catalog.py  cli.py  client.py  conformance.py
python/src/ophiolite_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/src/ophiolite_sdk/: __init__.py  analysis.py  avo.py  external.py  external_runner.py  interop.py  logs.py  models.py  operators.py  platform.py  project.py  seismic.py  surveys.py  views.py  wells.py
python/tests/: test_log_surfaces.py  test_seismic_surfaces.py
scripts/: external-import-acceptance.sh  generate-ts-contracts.ps1  run-benchmark-gated.ps1  validate-traceboost-command-boundary.mjs  verify-windows-benchmark-env.ps1  windows-msvc-cargo.cmd
scripts/traceboost-contracts-export/: Cargo.toml
scripts/traceboost-contracts-export/src/: main.rs
src/: asset.rs  backend.rs  backend_commands.rs  command_service.rs  dto.rs  examples.rs  lib.rs  main.rs  metadata.rs  parser.rs  project.rs  project_assets.rs  project_contracts.rs  project_edit.rs  project_vendor_import.rs  project_well_import.rs  storage.rs  synthetic_fixtures.rs  table.rs
tests/: backend_contract.rs  canonical_metadata.rs  command_contract.rs  command_service.rs  (+13 more)
traceboost/app/traceboost-app/: Cargo.toml  README.md
traceboost/app/traceboost-app/operations/: catalog.json
traceboost/app/traceboost-app/src/: lib.rs  main.rs  operation_catalog.rs  workflow_recipe.rs  workflow_report.rs  workflow_report_render.rs  workflow_runner.rs
traceboost/app/traceboost-app/tests/: f3_cli_smoke.rs  workflow_recipe_report_tests.rs  workflow_report_render_tests.rs  workflow_runner_tests.rs
traceboost/contracts/seis-contracts-core/: Cargo.toml
traceboost/contracts/seis-contracts-core/src/: lib.rs
traceboost/contracts/seis-contracts-operations/: Cargo.toml
traceboost/contracts/seis-contracts-operations/src/: datasets.rs  import_ops.rs  lib.rs  processing_ops.rs  resolve.rs  workspace.rs
traceboost/contracts/seis-contracts-views/: Cargo.toml
traceboost/contracts/seis-contracts-views/src/: lib.rs
traceboost/io/: Cargo.toml  README.md  SGYX_DESIGN.md
traceboost/io/benches/: ingest.rs
traceboost/io/src/: fixtures.rs  lib.rs  reader.rs
traceboost/io/tests/: export.rs  hdf5.rs  inspect.rs  reader.rs
traceboost/runtime/: Cargo.toml  README.md
traceboost/runtime/src/: error.rs  ingest.rs  lib.rs  main.rs  metadata.rs  preflight.rs  render.rs  store.rs  upscale.rs  validation.rs
traceboost/runtime/tests/: pipeline.rs
(+579 files in other folders)
