[workspace]
members = [
    ".",
    "crates/ophiolite-core",
    "crates/ophiolite-parser",
    "crates/ophiolite-table",
    "crates/ophiolite-package",
    "crates/ophiolite-project",
    "crates/ophiolite-ingest",
    "crates/ophiolite-compute",
    "crates/ophiolite-seismic",
    "crates/ophiolite-seismic-io",
    "crates/ophiolite-seismic-runtime",
    "crates/ophiolite-cli",
    "scripts/contracts-export",
]
exclude = ["apps/ophiolite-harness/src-tauri"]
resolver = "2"

[workspace.dependencies]
arrow-array = "58.0.0"
arrow-schema = "58.0.0"
csv = "1.4"
encoding_rs = "0.8"
parquet = "58.0.0"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
ts-rs = "10.1"
thiserror = "2.0.18"
tracing = "0.1.44"

[package]
name = "ophiolite"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
csv = { workspace = true }
ophiolite-core = { path = "crates/ophiolite-core" }
ophiolite-parser = { path = "crates/ophiolite-parser" }
ophiolite-table = { path = "crates/ophiolite-table" }
ophiolite-package = { path = "crates/ophiolite-package" }
ophiolite-project = { path = "crates/ophiolite-project" }
ophiolite-ingest = { path = "crates/ophiolite-ingest" }
ophiolite-compute = { path = "crates/ophiolite-compute" }
ophiolite-seismic = { path = "crates/ophiolite-seismic" }
ophiolite-seismic-io = { path = "crates/ophiolite-seismic-io" }
ophiolite-seismic-runtime = { path = "crates/ophiolite-seismic-runtime" }
ophiolite-cli = { path = "crates/ophiolite-cli" }
parquet = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
ndarray = "0.17"
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
