[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ophiolite-automation"
version = "0.1.0"
description = "Local-first Python automation and SDK surfaces for Ophiolite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ophiolite-automation = "ophiolite_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
