[package]
name = "lithos-package"
version = "0.1.0"
edition = "2024"

[dependencies]
lithos-core = { path = "../lithos-core" }
lithos-table = { path = "../lithos-table" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
