[package]
name = "lithos-project"
version = "0.1.0"
edition = "2024"

[dependencies]
lithos-core = { path = "../lithos-core" }
lithos-parser = { path = "../lithos-parser" }
lithos-package = { path = "../lithos-package" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
csv = { workspace = true }
parquet = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
