[package]
name = "ophiolite-package"
version = "0.1.0"
edition = "2024"

[dependencies]
ophiolite-core = { path = "../ophiolite-core" }
ophiolite-table = { path = "../ophiolite-table" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
