[package]
name = "ophiolite-project"
version = "0.1.0"
edition = "2024"

[dependencies]
ophiolite-core = { path = "../ophiolite-core" }
ophiolite-parser = { path = "../ophiolite-parser" }
ophiolite-package = { path = "../ophiolite-package" }
ophiolite-compute = { path = "../ophiolite-compute" }
ophiolite-seismic = { path = "../ophiolite-seismic" }
ophiolite-seismic-runtime = { path = "../ophiolite-seismic-runtime" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
csv = { workspace = true }
parquet = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
