[package]
name = "ophiolite-project"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
unsafe-developer-mode = []

[dependencies]
ophiolite-core = { path = "../ophiolite-core" }
ophiolite-parser = { path = "../ophiolite-parser" }
ophiolite-package = { path = "../ophiolite-package" }
ophiolite-compute = { path = "../ophiolite-compute" }
ophiolite-operators = { path = "../ophiolite-operators" }
ophiolite-seismic = { path = "../ophiolite-seismic" }
ophiolite-seismic-runtime = { path = "../ophiolite-seismic-runtime" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
csv = { workspace = true }
parquet = { workspace = true }
proj = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
ts-rs = { workspace = true }
ndarray = "0.17"

[dev-dependencies]
