[package]
name = "ophiolite-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
ophiolite-capabilities = { path = "../ophiolite-capabilities" }
ophiolite-operators = { path = "../ophiolite-operators" }
ophiolite-seismic = { path = "../ophiolite-seismic" }
ophiolite-seismic-runtime = { path = "../ophiolite-seismic-runtime" }
ophiolite-seismic-execution = { path = "../ophiolite-seismic-execution" }
seis-contracts-core = { path = "../../traceboost/contracts/seis-contracts-core" }
seis-contracts-views = { path = "../../traceboost/contracts/seis-contracts-views" }
seis-contracts-operations = { path = "../../traceboost/contracts/seis-contracts-operations" }
seis-runtime = { path = "../../traceboost/runtime" }
