[package]
name = "ophiolite-seismic-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
memmap2 = "0.9"
ndarray = "0.17.2"
ophiolite-seismic = { path = "../ophiolite-seismic" }
ophiolite-seismic-io = { path = "../ophiolite-seismic-io" }
rayon = "1.11"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
zarrs = { version = "0.23.7", default-features = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.15"

[[bench]]
name = "compute_storage"
harness = false
