[package]
name = "ophiolite-seismic-runtime"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = true

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
lz4_flex = "0.11"
memmap2 = "0.9"
ndarray = "0.17.2"
ophiolite-seismic = { path = "../ophiolite-seismic" }
ophiolite-seismic-io = { path = "../ophiolite-seismic-io" }
proj = { workspace = true }
rayon = "1.11"
realfft = "3.4"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }
zarrs = { version = "0.22.5", default-features = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.15"

[[bench]]
name = "compute_storage"
harness = false

[[bench]]
name = "post_stack_neighborhood_kernels"
harness = false

[[bin]]
name = "compute_storage_bench"
path = "src/bin/compute_storage_bench.rs"
bench = false
test = false
