[package]
name = "ophiolite-seismic"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = true

[dependencies]
ophiolite-capabilities = { path = "../ophiolite-capabilities" }
ophiolite-operators = { path = "../ophiolite-operators" }
schemars = { workspace = true }
serde = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
