[package]
name = "seis-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "seis_runtime"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ndarray = "0.17.2"
ophiolite-seismic = { path = "../../crates/ophiolite-seismic" }
ophiolite-seismic-runtime = { path = "../../crates/ophiolite-seismic-runtime" }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seis_contracts_core = { package = "seis-contracts-core", path = "../contracts/seis-contracts-core" }
seis_contracts_views = { package = "seis-contracts-views", path = "../contracts/seis-contracts-views" }
seis_io = { package = "seis-io", path = "../io" }
thiserror = "2.0"
zarrs = { version = "0.22.5", default-features = true }

[dev-dependencies]
tempfile = "3.15"
