[package]
name = "traceboost-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "traceboost_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
blake3 = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
log = "0.4"
ophiolite = { path = "../../../" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
traceboost-app = { path = "../../../traceboost/app/traceboost-app" }
seis-contracts-operations = { package = "seis-contracts-operations", path = "../../../traceboost/contracts/seis-contracts-operations" }
seis-runtime = { package = "seis-runtime", path = "../../../traceboost/runtime" }
tauri-plugin-devtools = "2.0.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2.6.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
